# SimplifinInterview-DS-Assginement

./: Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: oms_data.csv  paytm_data.csv
data/raw/: Data Assignment File.xlsx
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: dataAnalysis.ipynb  dataExploration.ipynb
reconciliation/: reconciliation.py
reports/: README.md  final_processed_oms_data.csv  final_processed_paytm_data.csv  reconciliation_report.csv
